forgot about the nav > ul step so here it is

--- a/index.css
+++ b/index.css
@@ -23,6 +23,11 @@ section {
   padding: 16px;
 }
 
+nav > ul {
+  list-style-type: none;
+  padding: 0;
+}
+
 #title {
   font-size: 40px;
   font-weight: 800;
